Try to prevent ERR_BLOCKED_BY_CLIENT deploy: preview

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,10 @@
 	"installCommand": "chmod +x ./install.sh && ./install.sh",
 	"rewrites": [
 		{
+			"source": "/nows/vscript.js",
+			"destination": "/_vercel/insights/script.js"
+		},
+		{
 			"source": "/(.*)",
 			"destination": "/"
 		}
