--- a/vercel.local.json
+++ b/vercel.local.json
@@ -5,6 +5,10 @@
 	"installCommand": "dotnet workload install wasm-tools",
 	"rewrites": [
 		{
+			"source": "/nows/vscript.js",
+			"destination": "/_vercel/insights/script.js"
+		},
+		{
 			"source": "/(.*)",
 			"destination": "/"
 		}
