fix: remove Miscellaneous Chores from changelog

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,12 +1,9 @@
 {
 	"packages": {
 		".": {
-			"release-type": "simple",
-			"release-as": "0.1.0"
+			"release-type": "simple"
 		}
 	},
-	"bootstrap-sha": "b43e9a5276321c82fa82ea8e62b1a8b41b10342f",
-	"latest-release-sha": "b43e9a5276321c82fa82ea8e62b1a8b41b10342f",
 	"prerelease": true,
 	"prerelease-type": "beta",
 	"bump-minor-pre-major": true,
