--- a/ZZZDmgCalculator/ZZZDmgCalculator.csproj
+++ b/ZZZDmgCalculator/ZZZDmgCalculator.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.7"/>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.7" PrivateAssets="all"/>
     <PackageReference Include="Radzen.Blazor" Version="5.2.9"/>
+    <PackageReference Include="SmartFormat" Version="3.5.1" />
   </ItemGroup>
 
   <ItemGroup>
